--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 
 [platformio]
 default_envs =
+	lord-board
 	;m5stack-cardputer
 	;m5stack-cplus2
 	;m5stack-cplus1_1
@@ -28,7 +29,7 @@ default_envs =
 	;LAUNCHER_CYD-2432S028
 	;LAUNCHER_CYD-2USB
 	;LAUNCHER_CYD-2432W328C
-	lilygo-t-embed-cc1101
+	;lilygo-t-embed-cc1101
 	;lilygo-t-embed
 	;lilygo-t-deck
 	;lilygo-t-watch-s3
